--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "## Set Up",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,10 @@
   "bugs": {
     "url": "https://github.com/turingschool-examples/turing-playlist-api/issues"
   },
-  "homepage": "https://github.com/turingschool-examples/turing-playlist-api#readme"
+  "homepage": "https://github.com/turingschool-examples/turing-playlist-api#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
+  }
 }
